2009-06-23  Jonathan Pryor  <jpryor@novell.com>

	* StringTest.cs: Add tests for .Remove(string[]) extension method.  
	  Patch thanks to Eric Maupin <me@ermau.com>.

2009-06-23  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerableTest.cs: Add tests for .ContiguousSubsequences().

2009-06-11  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerableTest.cs: Add tests for .ToReadOnlyDictionary().

2009-06-11  Jonathan Pryor  <jpryor@novell.com>

	* ReadOnlyDictionaryTest.cs: Added; implementation thanks to 
	  Eric Maupin  <me@ermau.com>.

2009-04-16  Jonathan Pryor  <jpryor@novell.com>

	* SystemStreamConverterTest.cs, TextValueReaderTest.cs: Update to
	  support new IValueReader/IValueWriter semantics.

2009-03-29  Jonathan Pryor  <jpryor@novell.com>

	* JaggedArrayTest.cs, IEnumerableTest.cs, RectangularArrayTest.cs: Add
	  #region blocks for docs.

2009-03-29  Jonathan Pryor  <jpryor@novell.com>

	* TypeTest.cs: Add #region for IsNullable() (for docs).

2009-03-21  Jonathan Pryor  <jpryor@novell.com>

	* TextValueReaderTest.cs: Enable Read_UnsupportedT(), as bnc#485377
	  has been fixed.

2009-03-14  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerableTest.cs: Add tests for .SelectBreadthFirst(),
	  .SelectDepthFirst().
	* TextValueReaderTest.cs: Disable Read_UnsupportedT, as it currently
	  crashes mono; see bnc#485377.
	* ObjectTest.cs: Add tests for TraverseBreadthFirst(),
	  TraverseBreadthFirstWithParent(), TraverseDepthFirst(),
	  TraverseDepthFirstWithParent().

2009-01-04  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerableTest.cs: bnc#400716 has been fixed in r122358, so enable 
	  these tests.

2008-12-26  Jonathan Pryor  <jpryor@novell.com>

	* DelegateTest.cs: Update tests for .Timings().

2008-12-09  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerableTest.cs: Add tests for .Each(), .ForEach().
	* Int32Test.cs, StringTest.cs: Cope with .Apply()->.Each() rename.

2008-12-09  Jonathan Pryor  <jpryor@novell.com>
